<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_referral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bc1"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height_line"
        android:background="@color/dc1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     >


        <TextView
            android:id="@+id/tv_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_launcher"
            android:layout_marginLeft="@dimen/marginLeft"
            android:gravity="center"
            android:drawablePadding="5dp"
           android:layout_centerVertical="true"
            android:text="上转" />

        <TextView
            android:id="@+id/tv_referral_in_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text=""
            android:textSize="@dimen/text_size_11"
            android:visibility="gone"
            android:textColor="@color/tc_addtion" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_line_thickness"
        android:layout_marginBottom="@dimen/marginLeft"
        android:layout_marginTop="5dp"
        android:background="@color/dc1" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"

        android:layout_marginBottom="@dimen/marginLeft"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/margin_right">

        <TextView
            android:id="@+id/tv_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/turn_exit"
            android:textColor="@color/tc2"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_referral_out_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_toRightOf="@+id/tv_out"
            android:gravity="center"
            android:text=""
            android:textColor="@color/tc2"
            android:textSize="@dimen/text_size_14" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/margin_right"
        >

        <TextView
            android:id="@+id/tv_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLeft"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/turn_enter"
            android:textColor="@color/tc2"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_referral_in_name"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_toRightOf="@+id/tv_in"
            android:gravity="center"
            android:text=""
            android:textColor="@color/tc2"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_line_thickness"
        android:layout_marginTop="13dp"
        android:background="@color/dc1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/margin_right"
        android:paddingBottom="@dimen/marginLeft"
        android:paddingTop="@dimen/marginLeft"
       >

        <TextView
            android:id="@+id/tv_referral_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/apply_time"
            android:textColor="@color/tc3"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:id="@+id/tv_referral_set_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/tv_referral_time"
            android:gravity="center"

            android:text=""
            android:textColor="@color/tc3"
            android:textSize="@dimen/text_size_12" />
    </RelativeLayout>

</LinearLayout>